Developer/src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Sync_With_CATS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Sync With CATS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>&apos;all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Calorie Packs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Grand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1 Marinade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuelita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advil Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advil PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguas Frescas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon CONTACT LENS CARE - NO DROPS CIBA AO Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon CONTACT LENS CARE - NO DROPS CIBA Aquify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon CONTACT LENS CARE - NO DROPS CIBA Clear Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon CONTACT LENS CARE - NO DROPS Opti-Free Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon CONTACT LENS CARE - NO DROPS Opti-Free Pure Moist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon CONTACT LENS CARE - NO DROPS Opti-Free Replenish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon EYE CARE/DROPS/GLASS CARE Alcon Tears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon EYE CARE/DROPS/GLASS CARE Genteal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon EYE CARE/DROPS/GLASS CARE Systane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon EYE CARE/DROPS/GLASS CARE Systane Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon EYE CARE/DROPS/GLASS CARE Systane Gel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon EYE CARE/DROPS/GLASS CARE Systane Ultra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcon EYE CARE/DROPS/GLASS CARE Zaditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aleve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Align</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alka-Seltzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alka-Seltzer Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almay - Eye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almay - Face</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Commitment_Type__c</fullName>
        <label>Contract Commitment Type</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Channel__c</fullName>
        <label>Delivery Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital O&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Cycle/Month</label>
        <referenceTo>Ad_Period__c</referenceTo>
        <relationshipLabel>Program</relationshipLabel>
        <relationshipName>Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incentive_Kicker__c</fullName>
        <label>Incentive Kicker</label>
        <picklist>
            <picklistValues>
                <fullName>Back to Basics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch into Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March for Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDUC - Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDUC - Confections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDUC - DSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDUC - Milk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Offers__c</fullName>
        <label>Number of Offers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Program</relationshipLabel>
        <relationshipName>Program</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Oppty_Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Triggered Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalina Category Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkout Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkout Prizes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkout Rx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty Reward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay for Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RxConx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;O Digital Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;O L2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;O Brand Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;O Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display CPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional Coupons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical Coupons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Optimizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN E-Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN Dedicated Newsletter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Program_Amount__c</fullName>
        <label>Program Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Cycle/Month</label>
        <referenceTo>Ad_Period__c</referenceTo>
        <relationshipLabel>Program (Start Cycle/Month)</relationshipLabel>
        <relationshipName>Program1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(AND( TODAY() &gt;= Start_Date__c , TODAY() &lt;= End_Date__c) , &apos;Active&apos;, &apos;Inactive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Program</label>
    <nameField>
        <label>Program名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>